tienda virtual modificado de nuevo

--- a/screens/index.html
+++ b/screens/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.css" />
-  <link rel="stylesheet" href="styles/lista-productos.css">
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/lista-productos.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet" />
@@ -19,13 +19,13 @@
     <nav>
       <div class="logo-busqueda">
         <div class="logo">
-          <a href="index.html"><img src="assets/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
         <button class="head__search__bar__button" type="submit" id="botonj">
           <input class="head__search__bar__input" type="text" id="formularioj" placeholder="Qué deseas buscar?" />
-          <img class="head__search__bar__img" src="assets/lupa-negro.png" alt="Buscar">
+          <img class="head__search__bar__img" src="../assets/lupa-negro.png" alt="Buscar">
         </button>
         <!-- <form action="" class="head__search__bar">
           <input  type="search" placeholder="¿Qué deseas buscar?" name="q"
@@ -37,13 +37,13 @@
       </div>
       <div class="login">
         <div class="logo2">
-          <a href="index.html"><img src="assets/logo.png" alt="logo" /></a>
+          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
-        <a href="screens/login.html"><button type="submit">Login</button></a>
+        <a href="login.html"><button type="submit">Login</button></a>
         <div class="lupa">
-          <img src="assets/lupa-negro.png" alt="logo" />
+          <img src="../assets/lupa-negro.png" alt="logo" />
         </div>
       </div>
     </nav>
@@ -78,7 +78,7 @@
   <section class="contato">
     <div class="columna1">
       <div class="referencia">
-        <a href="index.html"><img src="assets/logo.png" alt="logo" /></a>
+        <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
         <p class="logo-azul">Alura</p>
         <p>Geek</p>
       </div>
@@ -115,10 +115,10 @@
   <footer>
     <div class="developer__links">
       <a href="https://github.com/Claubress" target="_blank">
-        <img class="developer__links__item" src="assets/github.png" alt="Logo Github">
+        <img class="developer__links__item" src="../assets/github.png" alt="Logo Github">
       </a>
       <a href="https://www.linkedin.com/in/claudio-bressan" target="_blank">
-        <img class="developer__links__item" src="assets/in.png" alt="Logo Linkedin">
+        <img class="developer__links__item" src="../assets/in.png" alt="Logo Linkedin">
       </a>
     </div>
     <div class="developer__text">
@@ -127,7 +127,7 @@
     </div>
   </footer>
 
-  <script type="module" src="controllers/productos-controller.js"></script>
+  <script type="module" src="../controllers/productos-controller.js"></script>
 
 </body>
 
