tienda virtual modificado

--- a/screens/edit-product.html
+++ b/screens/edit-product.html
@@ -18,7 +18,7 @@
     <nav>
       <div class="logo-busqueda">
         <div class="logo">
-          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
@@ -36,7 +36,7 @@
       </div>
       <div class="login">
         <div class="logo2">
-          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
@@ -78,7 +78,7 @@
   <section class="contato">
     <div class="columna1">
       <div class="referencia">
-        <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+        <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
         <p class="logo-azul">Alura</p>
         <p>Geek</p>
       </div>
