--- a/screens/login.html
+++ b/screens/login.html
@@ -18,7 +18,7 @@
     <nav>
       <div class="logo-busqueda">
         <div class="logo">
-          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
