--- a/screens/produto.html
+++ b/screens/produto.html
@@ -19,7 +19,7 @@
     <nav>
       <div class="logo-busqueda">
         <div class="logo">
-          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
@@ -37,7 +37,7 @@
       </div>
       <div class="login">
         <div class="logo2">
-          <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+          <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
           <p class="logo-azul">Alura</p>
           <p>Geek</p>
         </div>
@@ -427,7 +427,7 @@
   <section class="contato">
     <div class="columna1">
       <div class="referencia">
-        <a href="index.html"><img src="../assets/logo.png" alt="logo" /></a>
+        <a href="../index.html"><img src="../assets/logo.png" alt="logo" /></a>
         <p class="logo-azul">Alura</p>
         <p>Geek</p>
       </div>
