tienda virtual completado ahora si

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h2 class="titulo">Todos los Productos</h2>
           <a class="mostrar-mais" id="btom" href="#">Ver todo<i class="fa-arrow-right"></i></a>
         </div>
-        <div class="sessao-produtos" id="resultadoj">
+        <div class="sessao-produtos" id="resultadoj" data-product>
           <ul id="res">
             <li>sadadsd</li>
           </ul>
