tienda virtual completito

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
           <h2 class="titulo">Todos los Productos</h2>
           <a class="mostrar-mais" id="btom" href="#">Ver todo<i class="fa-arrow-right"></i></a>
         </div>
-        <div class="sessao-produtos" id="resultadoj" data-product>
+        
+        <div class="sessao-produtos" id="resultadoj">
           <ul id="res">
             <li>sadadsd</li>
           </ul>
@@ -114,7 +115,7 @@
 
   <footer>
     <div class="developer__links">
-      <a href="https://github.com/Claubress" target="_blank">
+      <a href="https://github.com/maxigeronimo" target="_blank">
         <img class="developer__links__item" src="assets/github.png" alt="Logo Github">
       </a>
       <a href="https://www.linkedin.com/in/claudio-bressan" target="_blank">
