--- a/screens/login.html
+++ b/screens/login.html
@@ -104,7 +104,7 @@
 </section>
 <footer>
   <div class="developer__links">
-    <a href="https://github.com/Claubress" target="_blank">
+    <a href="https://github.com/maxigeronimo" target="_blank">
       <img class="developer__links__item" src="../assets/github.png" alt="Logo Github">
     </a>
     <a href="https://www.linkedin.com/in/claudio-bressan" target="_blank">
